@startuml

namespace CrcChecker.Common {
  enum PerformanceMarker {
    FileRead
	ComputeChecksum
	CheckFiles
  }

  interface IPerformanceTracer {
    Begin(PerformanceMarker performanceMarker, string param0 = null)
	End(PerformanceMarker performanceMarker, string param0 = null)
  }

  class NoTracingPerformanceTracer {
    +Begin(PerformanceMarker performanceMarker, string param0 = null)
	+End(PerformanceMarker performanceMarker, string param0 = null)
  }
  
  class ConsolePerformanceTracer {
    +Begin(PerformanceMarker performanceMarker, string param0 = null)
	+End(PerformanceMarker performanceMarker, string param0 = null)
  }
  
  class Log4NetPerformanceTracer {
    +Begin(PerformanceMarker performanceMarker, string param0 = null)
	+End(PerformanceMarker performanceMarker, string param0 = null)
  }
  
  IPerformanceTracer <|-- NoTracingPerformanceTracer  
  IPerformanceTracer <|-- ConsolePerformanceTracer
  IPerformanceTracer <|-- Log4NetPerformanceTracer
}

hide empty members
hide empty fields
hide empty methods

@enduml